--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cxz.dagger">
+    package="com.cxz.mvpdemo">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name="com.cxz.mvpdemo.AppAplication"
@@ -8,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.Light.NoTitleBar">
         <activity android:name="com.cxz.mvpdemo.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
